# Savitzky-Golay-Filter

./: .gitignore  CMakeLists.txt  README.md
include/iterative/: savgolFilter.h
src/: CMakeLists.txt  savgolFilter.c  savgol_export.c
src/iterative/: savgolFilter.c
test/iterative/: CMakeLists.txt  main.cpp  test_savgolFilter.cpp
